client/src/styles/global.css
* {
  transition: color .075s linear;
}

:global body {
  box-sizing: border-box;
  font-family: "Tahoma", sans-serif;
  margin: 0;
  overflow-x: hidden;
  font-size: 0.8rem;
  letter-spacing: 0.3px;
  line-height: 1.3;
}

:global h1 {
  font-weight: normal;
  padding: 5px;
  margin: 0;
  font-size: 1.6rem;
}

:global h2 {
  font-weight: normal;
  padding: 5px;
  margin: 0;
  letter-spacing: 0.5px;
  font-weight: bold;
  font-size: 1.4rem;
}

:global h3 {
  font-weight: normal;
  padding: 5px;
  margin: 0;
  font-size: 1.2rem;
}

:global h4 {
  font-weight: 800;
  padding: 5px;
  margin: 0;
  font-size: 1.0rem;
}

:global h5 {
  font-weight: normal;
  padding: 5px;
  margin: 0;
  font-size: 0.9rem;
  text-transform: uppercase;
  letter-spacing: 0.5px;
}

:global h6 {
  font-weight: normal;
  padding: 5px;
  margin: 0;
  font-size: 0.85rem;
  text-transform: uppercase;
  letter-spacing: 0.5px;
}

:global p {
  font-weight: normal;
  padding: 5px;
  margin: 0;
  font-size: 0.8rem;
}

::placeholder {
  color: #0a362e;
}

input {
  color: #0a362e;
}

select {
  color: #0a362e;
}

button {
  color: #0a362e;
  cursor: pointer;
}

div[role="button"] {
  cursor: pointer;
}

.stars {
  --percent: calc(var(--rating) * 20%);
  display: inline-block;
  font-size: 1.5em;
  font-family: Times;
  line-height: 1;
}

.stars:before {
  content: '★★★★★';
  letter-spacing: 1px;
  background: linear-gradient(90deg, gold var(--percent), #548C93 var(--percent));
  background-clip: text;
  -webkit-background-clip: text;
  -webkit-text-fill-color: transparent;
  -webkit-text-stroke: 1px #0a362e;
}

.starsDark {
  --percent: calc(var(--rating) * 20%);
  display: inline-block;
  font-size: 1.5em;
  font-family: Times;
  line-height: 1;
}

.starsDark:before {
  content: '★★★★★';
  letter-spacing: 1px;
  background: linear-gradient(90deg, gold var(--percent), #1E556C var(--percent));
  background-clip: text;
  -webkit-background-clip: text;
  -webkit-text-fill-color: transparent;
  -webkit-text-stroke: 1px #B6D8C4;
}

.thumbnailMain {
  display: inline-block;
  padding-right: 1%;
  padding-left: 5px;
}

.thumbnail {
  display: inline-block;
}

.photoModal {
  position: fixed;
  display: flex;
  justify-content: center;
  z-index: 2;
  left: 0;
  top: 0;
  width: 100%;
  height: 100%;
  overflow: auto;
  background-color: rgba(0, 0, 0, .75);
}

.photo {
  z-index: 3;
  align-self: center;
}


.banner {
  display: flex;
  justify-content: space-between;
  align-items: flex-end;
  margin-bottom: 30px;
}

.logo {
  background-image: url('../assets/Amorey.png');
  background-repeat: no-repeat;
  background-size: cover;
  height: 75px;
  aspect-ratio: 3.5;
}

.modalLogo {
  margin-top: 5px;
  margin-bottom: 15px;
  margin-left: 30%;
  background-image: url('../assets/Amorey.png');
  background-repeat: no-repeat;
  background-size: cover;
  height: 50px;
  aspect-ratio: 3.5;
}

.modalBackground {
  position: fixed;
  display: flex;
  justify-content: center;
  align-items: center;
  z-index: 3;
  left: 0;
  top: 0;
  width: 100%;
  height: 100%;
  overflow: auto;
  background-color: rgba(0, 0, 0, .75);
}

.modalBody, .modalBodyDark {
  position: fixed;
  display: flex;
  justify-content: center;
  z-index: 4;
  width: 500px;
  height: 700px;
  overflow: auto;
}

.modalBody {
  border: 2px solid;
  background: linear-gradient(white, #e7f5f0 70px, #8bbfb4);
}

.modalBodyDark {
  border: 2px #B6D8C4 solid;
  background: linear-gradient(black, #133a4a 200px, #163051);
}

@media (max-width: 767px) {
  .modalBody,
  .modalBodyDark {
    overflow-x: scroll;
  }
}

